# summer-of-code-2007

./: CMakeLists.txt  README.md  solid_sdp.diff  solid_security.diff
btpm/: btpmactionplugin.cpp  btpmactionplugin.desktop  btpmactionplugin.h  main.cpp  mainwindow.ui  models.cpp  models.h
btpm/.svn/: entries
btpm/.svn/text-base/: CMakeLists.txt.svn-base  iconfinder.cpp.svn-base  iconfinder.h.svn-base  mainwindow.cpp.svn-base  mainwindow.h.svn-base
btpm/actions/: CMakeLists.txt  btpm_action_exec.h
btpm/actions/.svn/: entries
btpm/actions/.svn/text-base/: btpm_action_exec.cpp.svn-base  btpm_action_exec.desktop.svn-base
chooser/: bluetoothchooser.cpp  bluetoothchooser.h  bluetoothchoosermodel.cpp  chooser.ui
chooser/.svn/: entries
chooser/.svn/text-base/: CMakeLists.txt.svn-base  bluetoothchoosermodel.h.svn-base
kbluemon/: CMakeLists.txt  localDevicesDialog.cpp  localDevicesDialog.h  localDevicesDialog.ui  mainwindow.ui  monitor.cpp  monitor.h  rssidelegate.h
kbluemon/.svn/: entries
kbluemon/.svn/text-base/: kbluemon.desktop.svn-base  main.cpp.svn-base  rssidelegate.cpp.svn-base
kioslave/: CMakeLists.txt
kioslave/.svn/: entries
kioslave/bluetooth/: bluetoothslave.cpp
kioslave/bluetooth/.svn/: entries
plasma/.svn/: entries
plasma/.svn/text-base/: CMakeLists.txt.svn-base
plasma/applet/: bluetoothapplet.cpp  bluetoothapplet.h  plasma-bluetooth-default.desktop  visuals.h
plasma/dbus/: dataengine.h  dataenginemanager.h  dbusdataengine.h  main.cpp  org.kde.plasma.service.cmake
plasma/engine/: bluetoothdataengine_p.cpp
(+19 files in other folders)
